<resources>
    <string name="app_name">Boun Course Planner</string>
    <string name="course">Course</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="instructorPH">Instructor</string>
    <string name="hoursPH">Hours</string>
    <string name="creditPH">Credit</string>
    <string name="schedulePH">Schedule</string>
    <string name="ectsPH">Ects</string>
    <string name="is">" :  "</string>
</resources>
