<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.CourseInfoFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/instructorPH"
                android:id="@+id/instuctorPH"
                android:layout_column="0" />
            <TextView
                android:text="@string/is"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/instuctor"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/hoursPH"
                android:id="@+id/hoursPH"
                android:layout_column="0" />
            <TextView
                android:text="@string/is"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/hours"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/creditPH"
                android:id="@+id/creditPH"
                android:layout_column="0" />
            <TextView
                android:text="@string/is"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/credit"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/ectsPH"
                android:id="@+id/ectsPH"
                android:layout_column="0" />
            <TextView
                android:text="@string/is"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/ects"
                android:layout_column="2" />
        </TableRow>
    </TableLayout>

</FrameLayout>
